--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       version_number:
         description: 'Version Number'
         required: true
-        default: 'v2.988'
+        default: '2.989'
         type: string
 
 jobs:
@@ -49,4 +49,4 @@ jobs:
         artifacts: "app/build/outputs/apk/oss/release/SkyTubeLegacy-*.apk,app/build/outputs/apk/extra/release/SkyTubeLegacy-*.apk"
         draft: "true"
         name: "Version ${{ inputs.version_number }}"
-        tag: ${{ inputs.version_number}}
+        tag: "v${{ inputs.version_number}}"
