--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity
             android:name=".gui.activities.PreferencesActivity"
             android:label="@string/preferences"
+            android:exported="true"
             android:parentActivityName=".gui.activities.MainActivity"
             tools:targetApi="jelly_bean">
             <meta-data
