--- a/app/src/extra/AndroidManifest.xml
+++ b/app/src/extra/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 	<!-- Android Pie now requires this permission to run a foreground service. Chromecast support uses this. See https://developer.android.com/guide/components/services#Foreground -->
+	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" /> <!-- [Optional]  Only used by SkyTube Extra flavor to update the app -->
 
 	<application>
 		<meta-data
