--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlinVersion = '1.6.21'
+    ext.buildNumber = 50
     repositories {
         google()
         jcenter()
