BuildConfig change to make gradle happy

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
     lint {
         abortOnError false
