Internal language selector
Instead of relying on the device language, add ability to set the
language in the app.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ android {
         viewBinding true
         buildConfig true
     }
+    androidResources {
+        generateLocaleConfig true
+    }
     lint {
         abortOnError false
         checkReleaseBuilds false
