--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,9 +164,9 @@ dependencies {
         exclude group: 'com.google.http-client', module: 'google-http-client-jackson2'
     }
 
-    // implementation 'com.github.SkyTubeTeam.NewPipeExtractor:NewPipeExtractor:3be6a7b2b3b0bf4'
+    // implementation 'com.github.SkyTubeTeam.NewPipeExtractor:NewPipeExtractor:1704cfcfc5ed85c'
     // implementation 'com.github.TeamNewPipe.NewPipeExtractor:NewPipeExtractor:v0.22.6'
-    implementation 'com.github.SkyTubeTeam.NewPipeExtractor:NewPipeExtractor:skytube-2025-01-23-android19'
+    implementation 'com.github.SkyTubeTeam.NewPipeExtractor:NewPipeExtractor:skytube-2025-02-09'
 
     def skytubeComponents = '0.0.9'
     implementation ("com.github.SkyTubeTeam.components:okhttp-client:$skytubeComponents") {
