Try to fix the comment paging behaviour
With some generated tests and upgrade junit

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ android.enableJetifier=true
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 
+android.jetifier.ignorelist=byte-buddy-1.17.7.jar
